--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     background-color: antiquewhite;
     font-family: Verdana;
+    max-width: 900px;
+    margin: auto;
 }
 
 .photo_avatar {
@@ -12,8 +14,7 @@ body{
 
 #title, .subtitle, .post_title  {
     color: #505050;
-    padding-left: 15px;
-    
+   
 }
 
 #title{
@@ -35,9 +36,9 @@ a{
 }
 
 .post{
-    background-color: "#fff";
+    background-color: #fff;
     padding: 15px;
-    border: 3px solid "#505050";
+    border: 3px solid #505050;
     margin-bottom: 15px;
     border-radius: 5px 10px;
 }
@@ -46,12 +47,13 @@ a{
     margin: 0;
     margin-bottom: 15px;
     text-transform: capitalize;
+    text-align: justify;
 }
 
 .post_image{
     margin-bottom: 15px;
-    width: 1000px;
-    height: 400px;
+    width: 100%;
+    
 }
 
 .contact_list{
